icon vertical alignment fixed inside of link elements

--- a/Upnp.Control.Web/ClientApp/src/styles/_icons.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_icons.scss
@@ -4,13 +4,13 @@ $boost: 1.25;
 
 .icon {
     display: inline-block;
-    width: calc($boost*1em);
+    width: #{$boost * 1em};
     aspect-ratio: 1;
     object-fit: contain;
 }
 
 svg.icon {
-    vertical-align: -0.125em;
+    vertical-align: #{($line-height-base - 1) * -0.5em};
     fill: currentColor;
 }
 
